--- a/cdn/downloads/index.html
+++ b/cdn/downloads/index.html
@@ -44,5 +44,9 @@
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
